test/users/shetag/objRefAsFormArg.good
objRefAsFormArg.chpl:15: In function 'main':
objRefAsFormArg.chpl:20: error: unresolved call 'B(a=A)'
objRefAsFormArg.chpl:10: note: candidates are: B(a = nil)
